hphp/test/slow/ext_mysqli/test_mysqli_constructor.php.expectf
object(mysqli) (%d) {
  ["__connection":"mysqli":private]=>
  resource(%d) of type (mysql link)
}
object(mysqli_result) (%d) {
  ["__result":"mysqli_result":private]=>
  resource(%d) of type (mysql link)
  ["__resulttype":"mysqli_result":private]=>
  int(0)
  ["__done":"mysqli_result":private]=>
  bool(false)
}

Fatal error: Uncaught exception 'Exception' with message 'Argument to mysqli_result::__construct must be of type resource or mysqli' in %s/test_mysqli_constructor.php:15
Stack trace:
#0 %s/test_mysqli_constructor.php(15): mysqli_result->__construct()
%A
